# kit-log

./: .gitignore
Branch_and_Bound/: benchmark.sh
Branch_and_Bound/include/: BnB.hpp
Branch_and_Bound/src/: main.cpp
Branch_and_Cut/: benchmark.sh  makefile  output.csv
Branch_and_Cut/src/: MyCutCallback.cpp  auxFunctions.cpp  construction.cpp  construction.h  main.cpp  separation.cpp  separation.h  separtion.cpp
Branch_and_Price/: makefile
Branch_and_Price/src/: BP.cpp  BP.h  combo.cpp  combo.h  data.cpp  data.h  main.cpp  node.cpp  node.h  solve.cpp  subproblem.cpp  subproblem.h  utils.cpp
MLP/: README.md  benchmark.sh  makefile  meson.build  output.csv
MLP/include/: MLP.hpp  solution.hpp
MLP/src/: GILS.cpp  MLP.cpp  RNVD.cpp  RVND.cpp  construction.cpp  data.cpp  main.cpp  meson.build  neighborhood.cpp  perturbation.cpp  solution.cpp  subsequence.cpp
Relaxacao_Lagrangiana/: benchmark.sh  makefile  output.csv
Relaxacao_Lagrangiana/src/: Kruskal.cpp  Kruskal.h  bb.cpp  bb.h  construction.cpp  data.cpp  main.cpp  node.cpp  node.h  solution.h  solve.cpp
TSP/: output.txt
TSP/src/: main.cpp
src/: main.cpp
